add card profile and notifications

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
-    "lodash.clonedeep": "^4.5.0",
+    "formik": "^2.2.6",
+    "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-datepicker": "^3.4.1",
@@ -22,6 +23,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-smooth-scrolling": "^1.0.2",
     "react-spinners": "^0.10.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
